<resources>
    <string name="app_name">SimpleGram</string>
    <string name="log_in">Log in</string>
    <string name="Instagram">Instagram</string>
    <string name="post">Post</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>