<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/Instagram"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/etUsernameSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="214dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etPasswordSignUp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="@color/login"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="314dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="314dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/log_in"
        android:textColor="@color/login"
        android:textSize="16sp" />

</RelativeLayout>