<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="45dp"
        android:text="@string/post"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="421dp" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="wrap_content"
        android:layout_height="222dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="147dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnPicture"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/etDescription"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="65dp"
        android:layout_toStartOf="@+id/btnPost"
        android:text="@string/take_a_picture" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="387dp"
        android:layout_height="135dp"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="0dp"
        android:contentDescription="Post Description"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Post Description here ..."
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:text="Post Description here ..." />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="286dp"
        android:background="#232222" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/etDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#232222" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="17dp"
        android:text="@string/logout" />


</RelativeLayout>